--- a/WODs/BrowserHistory3/styles.css
+++ b/WODs/BrowserHistory3/styles.css
@@ -35,3 +35,10 @@ img{
    float: left;
   }
 
+section{
+    
+    
+    -webkit-columns: 100px 3; /* Chrome, Safari, Opera */
+    columns: 100px 3;
+      
+}
