--- a/Ra_Justin_Assigment1/public/products_style.css
+++ b/Ra_Justin_Assigment1/public/products_style.css
@@ -18,14 +18,14 @@ img{
 }
 
 
-/*h1 alignment*/
-h1,h2{
+/*h1 alignment (title page)*/
+h1{
     text-align: center;
 }
 
 /*h1&h2 font styling*/
 h1,h2{
-    border: 5px solid rgb(255, 136, 0);
+    border: 5px solid rgb(10, 118, 6);
     font-family:fantasy;
     color: #bc2e1e;
     background: #edde9c;
@@ -33,19 +33,23 @@ h1,h2{
 }
 
 /*content alignment*/
-div{
+main {
     display: flex;
-    flex-flow: wrap;
+    flex-flow: row wrap;
     justify-content: space-around;
-
-}
+    background-position: center;
+    background-color: rgba(255, 250, 205, 0.473);
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 
 /*background image alignment*/
 div{
 
-    background-image:url("./images/phone_globe.jpg" );
-    background-repeat: no-repeat;
-    
+    background-image:url("./images/DBZlogo.jpg" );
+    background-repeat: repeat;
+    background-position: -550px;
+    background-size: 100px
 }
 
 
@@ -56,8 +60,14 @@ p{
 background-color: #333;
 text-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px;
     color: #dae4f1;  
+    
 }
 
+label{
+    text-align: center ;
+    border: 5px solid rgb(10, 118, 6);
+    background-color: #e65e09; 
+}
 
 /*purple border design*/
 div{
@@ -68,3 +78,9 @@ div{
     border-radius: 30px;
     
 } 
+
+
+footer{
+    text-align: center;    
+    
+}
